language/move-prover/tests/sources/functional/opaque.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/opaque.move:13:9 ───
    │
 13 │         ensures result == 2;
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/opaque.move:9: opaque_incorrect
    =         result = <redacted>
    =     at tests/sources/functional/opaque.move:10: opaque_incorrect
    =     at tests/sources/functional/opaque.move:13
